<resources>
    <string name="app_name">My Application</string>
    <string name="hola_mundo">Hola mundo</string>
    <string name="mi_boton">Mi boton</string>
    <string name="usuario">usuario</string>
    <string name="contrasena">contrasena</string>
    <string name="sing_up">sing_up</string>
    <string name="inicio_de_sesion">inicio de sesion</string>
    <string name="Inicio_De_Sesion">Inicio de Sesion</string>
    <string name="INICIO_DE_SESION">INICIO DE SESION</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="edad">edad</string>
    <string name="Edad">Edad</string>
    <string name="Siguiente">Siguiente</string>
    <string name="registro">Registro</string>
    <string name="Registro">registro</string>
    <string name="REGISTRO">Registro</string>
    <string name="Necesitas_ayuda">Necesitas ayuda?</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="olvidaste_tu_contrasena">¿olvidaste tu contrasena?</string>
    <string name="Perfil">Perfil</string>
    <string name="bienvenid">¡Bienvenid@!</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="ir_a_mi_perfil">Ir a mi Perfil</string>
    <string name="accede_a_tu_perfil_para_cuadrar_los_ultimos_detalles">Accede a tu perfil para cuadrar los ultimos detalles</string>
    <string name="terminos_y_condiciones">Terminos y Condiciones</string>
    <string name="correo_example_gmail_com">Correo:Example@gmail.com</string>
    <string name="Eda">Edad</string>
    <string name="telefono">Telefono</string>
    <string name="usuarioo">Usuario:</string>
    <string name="finalizar">Finalizar</string>
    <string name="bienvenid_val">Bienvenid@ Val</string>
    <string name="usuario_val">Usuario:Val</string>
    <string name="explora_todas_las_incre_bles_caracter_sticas_que_hemos_preparado_para_ti_descubre_nuevas_experiencias_con_ctate_con_amigos_y_disfruta_de_contenido_exclusivo_nuestra_misi_n_es_hacer_que_tu_experiencia_sea_nica">Explora todas las increíbles características que hemos preparado para ti. Descubre nuevas experiencias, conéctate con amigos y disfruta de contenido exclusivo. Nuestra misión es hacer que tu experiencia sea única.</string>
    <string name="si_ntete_como_en_casa_y_aprovecha_al_m_ximo_todo_lo_que_tenemos_para_ofrecerte_comienza_a_explorar_ahora_y_nete_a_nuestra_comunidad_esperamos_que_disfrutes_tu_viaje_con_nosotros">Siéntete como en casa y aprovecha al máximo todo lo que tenemos para ofrecerte. Comienza a explorar ahora y únete a nuestra comunidad. ¡Esperamos que disfrutes tu viaje con nosotros!</string>
    <string name="mi_perfilll">MI PERFIL</string>
</resources>