<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    tools:context=".MainActivity3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MI PERFIL"
        android:textColor="@color/azul2"
        android:layout_margin="40dp"
        android:textSize="26sp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:src="@drawable/budy"
        android:layout_marginBottom="46dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario_val"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo_example_gmail_com"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Eda"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefono"
        android:gravity="center"
        android:layout_marginBottom="46dp"/>

    <Button
        android:id="@+id/finalizar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:text="@string/finalizar"
        android:textSize="20sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Necesitas_ayuda"
        android:textColor="@color/azul"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:textSize="16sp"/>


</LinearLayout>