<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/INICIO_DE_SESION"
        android:textColor="@color/red"
        android:layout_margin="46dp"
        android:layout_gravity="center"/>

    <ImageView
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_200dp"
        android:src="@drawable/candas"
        android:layout_marginBottom="46dp"
        android:layout_gravity="center" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/contrasena"
        android:layout_marginBottom="46dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/usuario"
        android:layout_marginBottom="46dp"/>

    <Button
        android:id="@+id/boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar_sesion" />

</LinearLayout>